[package]
name = "edit"
description = "Open a file in the default text editor"
authors = ["Milkey Mouse <milkeymouse@meme.institute>"]
repository = "https://github.com/milkey-mouse/edit"
keywords = ["editor", "edit", "editing", "cli"]
categories = ["command-line-interface", "config", "text-processing", "text-editors"]
license = "CC0-1.0"
version = "0.1.3"
edition = "2018"

[lib]
name = "edit"

[[bin]]
name = "edit-example"
path = "src/bin.rs"

[features]
default = ["better-path"]
better-path = ["which"]
quoted-env = ["shell-words"]

[dependencies]
shell-words = { version = "1.1.0", optional = true }
tempfile = "3.1.0"
which = { version = "4.0", default-features = false, optional = true }
